Removing support of net6.0 and net7.0 Changing projects name and namespace

--- a/InertiaCoreTests/InertiaAspNetCore.Tests.csproj
+++ b/InertiaCoreTests/InertiaAspNetCore.Tests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>net6.0;net7.0;net8.0</TargetFrameworks>
+        <TargetFrameworks>net8.0</TargetFrameworks>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
 
@@ -25,7 +25,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\InertiaCore\InertiaAspNetCore.csproj" />
+      <ProjectReference Include="..\InertiaCore\InertiaAspNetCore.csproj" />
     </ItemGroup>
 
 </Project>
