--- a/InertiaCore/InertiaAspNetCore.csproj
+++ b/InertiaCore/InertiaAspNetCore.csproj
@@ -2,15 +2,15 @@
     <PropertyGroup>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <Version>0.0.8</Version>
-        <TargetFrameworks>net6.0;net7.0;net8.0</TargetFrameworks>
+        <Version>0.0.1</Version>
+        <TargetFrameworks>net8.0</TargetFrameworks>
         <PackageId>AspNetCore.InertiaCore</PackageId>
         <Authors>TanguyPa</Authors>
         <Description>Inertia.js ASP.NET Adapter. https://inertiajs.com/</Description>
         <PackageProjectUrl>https://github.com/TanguyPa/inertia-asp-core</PackageProjectUrl>
         <RepositoryUrl>https://github.com/TanguyPa/inertia-asp-core</RepositoryUrl>
         <RepositoryType>git</RepositoryType>
-        <PackageLicenseFile>LICENSE</PackageLicenseFile>
+        <!--<PackageLicenseFile>LICENSE</PackageLicenseFile>-->
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <PackageTags>Inertia,Inertiajs,ASPNET,Vue,React,Svelte</PackageTags>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
